Fixes für Verhalten
