# docs/api/openapi-v1.json
@@ -1003,6 +1003,17 @@
             ],
             "title": "Page Event"
           },
+          "quick_replies_max": {
+            "anyOf": [
+              {
+                "type": "integer"
+              },
+              {
+                "type": "null"
+              }
+            ],
+            "title": "Quick Replies Max"
+          },
           "referrer": {
             "default": "direkt",
             "title": "Referrer",
